# team-32-app

./: .gitignore  .vercelignore  AGENTS.md  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tatus
app/: globals.css  layout.tsx  page.tsx
app/clothing/: page.tsx
app/login/: page.tsx
app/profile/: page.tsx
app/register/: actions.ts  page.tsx
app/sns/: page.tsx
app/styling/: page.tsx
clip/: pyproject.toml  search.py  seed.py  test_vectorize_image.py
clip/api/: Dockerfile  main.py  requirements.txt
components/: ai-diagnosis-modal.tsx  app-sidebar.tsx  clothing-manager.tsx  dress-up-editor.tsx  face-image-upload.tsx  feedback-analyzer.tsx  frame-type-selector.tsx  full-body-image-modal.tsx  full-body-image-upload.tsx  logout-button.tsx  mobile-background-provider.tsx  mobile-bottom-nav.tsx  outfit-evaluation-gemini.tsx  outfit-evaluator.tsx  personal-color-selector.tsx  profile-setup.tsx  skeleton-diagnosis.tsx  usage-confirmation-dialog.tsx
components/clothing/: add-item-dialog.tsx  category-tabs.tsx  item-card.tsx
docs/: supabase.md
hooks/: use-clothing-items.ts  use-user-profile.ts  use-user.ts
lib/: api-usage-limiter.ts  auth.ts  background-mapping.ts  gemini.ts  image-utils.ts  with-api-limit.ts  with-auth.ts
lib/supabase/: middleware.ts  server.ts  types.ts
lib/types/: clothing.ts
public/: manifest.json
recommend/outfit-transformer/: .dockerignore  Dockerfile
supabase/migrations/: 20250118000000_create_sns_tables.sql  20250118000001_create_storage_bucket.sql  20250908102742_initial.sql  (+18 more)
(+42 files in other folders)
