[project]
name = "clip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fashion-clip>=0.2.2",
    "fastapi>=0.116.2",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "vecs>=0.4.5",
]
